zerocopy-derive/tests/ui-stable/enum.stderr
error: TryFromBytes not supported on enum types
  --> tests/ui-stable/enum.rs:19:1
   |
19 | / #[repr("foo")]
20 | | enum Generic1 {
21 | |     A,
22 | | }
   | |_^

error: unrecognized representation hint
  --> tests/ui-stable/enum.rs:19:8
   |
19 | #[repr("foo")]
   |        ^^^^^

error: TryFromBytes not supported on enum types
  --> tests/ui-stable/enum.rs:25:1
   |
25 | / #[repr(foo)]
26 | | enum Generic2 {
27 | |     A,
28 | | }
   | |_^

error: unrecognized representation hint
  --> tests/ui-stable/enum.rs:25:8
   |
25 | #[repr(foo)]
   |        ^^^

error: TryFromBytes not supported on enum types
  --> tests/ui-stable/enum.rs:31:1
   |
31 | / #[repr(transparent)]
32 | | enum Generic3 {
33 | |     A,
34 | | }
   | |_^

error: unsupported representation for deriving FromBytes, AsBytes, or Unaligned on an enum
  --> tests/ui-stable/enum.rs:31:8
   |
31 | #[repr(transparent)]
   |        ^^^^^^^^^^^

error: TryFromBytes not supported on enum types
  --> tests/ui-stable/enum.rs:37:1
   |
37 | / #[repr(u8, u16)]
38 | | enum Generic4 {
39 | |     A,
40 | | }
   | |_^

error: conflicting representation hints
  --> tests/ui-stable/enum.rs:37:1
   |
37 | #[repr(u8, u16)]
   | ^

error: TryFromBytes not supported on enum types
  --> tests/ui-stable/enum.rs:43:1
   |
43 | / enum Generic5 {
44 | |     A,
45 | | }
   | |_^

error: must have a non-align #[repr(...)] attribute in order to guarantee this type's memory layout
<<<<<<< HEAD
  --> tests/ui-stable/enum.rs:42:21
   |
42 | #[derive(FromZeros, FromBytes)]
   |                     ^^^^^^^^^
   |
   = note: this error originates in the derive macro `FromBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error: only C-like enums can implement FromZeros
=======
  --> tests/ui-stable/enum.rs:42:36
   |
42 | #[derive(TryFromBytes, FromZeroes, FromBytes)]
   |                                    ^^^^^^^^^
   |
   = note: this error originates in the derive macro `FromBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error: TryFromBytes not supported on enum types
  --> tests/ui-stable/enum.rs:70:1
   |
70 | / enum FromZeroes1 {
71 | |     A(u8),
72 | | }
   | |_^

error: only C-like enums can implement FromZeroes
>>>>>>> [derive] Support `derive(TryFromBytes)` for structs
  --> tests/ui-stable/enum.rs:70:1
   |
70 | / enum FromZeros1 {
71 | |     A(u8),
72 | | }
   | |_^

<<<<<<< HEAD
error: only C-like enums can implement FromZeros
=======
error: TryFromBytes not supported on enum types
  --> tests/ui-stable/enum.rs:75:1
   |
75 | / enum FromZeroes2 {
76 | |     A,
77 | |     B(u8),
78 | | }
   | |_^

error: only C-like enums can implement FromZeroes
>>>>>>> [derive] Support `derive(TryFromBytes)` for structs
  --> tests/ui-stable/enum.rs:75:1
   |
75 | / enum FromZeros2 {
76 | |     A,
77 | |     B(u8),
78 | | }
   | |_^

<<<<<<< HEAD
error: FromZeros only supported on enums with a variant that has a discriminant of `0`
=======
error: TryFromBytes not supported on enum types
  --> tests/ui-stable/enum.rs:81:1
   |
81 | / enum FromZeroes3 {
82 | |     A = 1,
83 | |     B,
84 | | }
   | |_^

error: FromZeroes only supported on enums with a variant that has a discriminant of `0`
>>>>>>> [derive] Support `derive(TryFromBytes)` for structs
  --> tests/ui-stable/enum.rs:81:1
   |
81 | / enum FromZeros3 {
82 | |     A = 1,
83 | |     B,
84 | | }
   | |_^

error: TryFromBytes not supported on enum types
  --> tests/ui-stable/enum.rs:91:1
   |
91 | / #[repr(C)]
92 | | enum FromBytes1 {
93 | |     A,
94 | | }
   | |_^

error: FromBytes requires repr of "u8", "u16", "i8", or "i16"
  --> tests/ui-stable/enum.rs:91:8
   |
91 | #[repr(C)]
   |        ^

error: TryFromBytes not supported on enum types
   --> tests/ui-stable/enum.rs:97:1
    |
97  | / #[repr(usize)]
98  | | enum FromBytes2 {
99  | |     A,
100 | | }
    | |_^

error: FromBytes requires repr of "u8", "u16", "i8", or "i16"
  --> tests/ui-stable/enum.rs:97:8
   |
97 | #[repr(usize)]
   |        ^^^^^

error: TryFromBytes not supported on enum types
   --> tests/ui-stable/enum.rs:103:1
    |
103 | / #[repr(isize)]
104 | | enum FromBytes3 {
105 | |     A,
106 | | }
    | |_^

error: FromBytes requires repr of "u8", "u16", "i8", or "i16"
   --> tests/ui-stable/enum.rs:103:8
    |
103 | #[repr(isize)]
    |        ^^^^^

error: TryFromBytes not supported on enum types
   --> tests/ui-stable/enum.rs:109:1
    |
109 | / #[repr(u32)]
110 | | enum FromBytes4 {
111 | |     A,
112 | | }
    | |_^

error: FromBytes requires repr of "u8", "u16", "i8", or "i16"
   --> tests/ui-stable/enum.rs:109:8
    |
109 | #[repr(u32)]
    |        ^^^

error: TryFromBytes not supported on enum types
   --> tests/ui-stable/enum.rs:115:1
    |
115 | / #[repr(i32)]
116 | | enum FromBytes5 {
117 | |     A,
118 | | }
    | |_^

error: FromBytes requires repr of "u8", "u16", "i8", or "i16"
   --> tests/ui-stable/enum.rs:115:8
    |
115 | #[repr(i32)]
    |        ^^^

error: TryFromBytes not supported on enum types
   --> tests/ui-stable/enum.rs:121:1
    |
121 | / #[repr(u64)]
122 | | enum FromBytes6 {
123 | |     A,
124 | | }
    | |_^

error: FromBytes requires repr of "u8", "u16", "i8", or "i16"
   --> tests/ui-stable/enum.rs:121:8
    |
121 | #[repr(u64)]
    |        ^^^

error: TryFromBytes not supported on enum types
   --> tests/ui-stable/enum.rs:127:1
    |
127 | / #[repr(i64)]
128 | | enum FromBytes7 {
129 | |     A,
130 | | }
    | |_^

error: FromBytes requires repr of "u8", "u16", "i8", or "i16"
   --> tests/ui-stable/enum.rs:127:8
    |
127 | #[repr(i64)]
    |        ^^^

error: Unaligned requires repr of "u8" or "i8", and no alignment (i.e., repr(align(N > 1)))
   --> tests/ui-stable/enum.rs:137:8
    |
137 | #[repr(C)]
    |        ^

error: Unaligned requires repr of "u8" or "i8", and no alignment (i.e., repr(align(N > 1)))
   --> tests/ui-stable/enum.rs:143:8
    |
143 | #[repr(u16)]
    |        ^^^

error: Unaligned requires repr of "u8" or "i8", and no alignment (i.e., repr(align(N > 1)))
   --> tests/ui-stable/enum.rs:149:8
    |
149 | #[repr(i16)]
    |        ^^^

error: Unaligned requires repr of "u8" or "i8", and no alignment (i.e., repr(align(N > 1)))
   --> tests/ui-stable/enum.rs:155:8
    |
155 | #[repr(u32)]
    |        ^^^

error: Unaligned requires repr of "u8" or "i8", and no alignment (i.e., repr(align(N > 1)))
   --> tests/ui-stable/enum.rs:161:8
    |
161 | #[repr(i32)]
    |        ^^^

error: Unaligned requires repr of "u8" or "i8", and no alignment (i.e., repr(align(N > 1)))
   --> tests/ui-stable/enum.rs:167:8
    |
167 | #[repr(u64)]
    |        ^^^

error: Unaligned requires repr of "u8" or "i8", and no alignment (i.e., repr(align(N > 1)))
   --> tests/ui-stable/enum.rs:173:8
    |
173 | #[repr(i64)]
    |        ^^^

error: Unaligned requires repr of "u8" or "i8", and no alignment (i.e., repr(align(N > 1)))
   --> tests/ui-stable/enum.rs:179:8
    |
179 | #[repr(usize)]
    |        ^^^^^

error: Unaligned requires repr of "u8" or "i8", and no alignment (i.e., repr(align(N > 1)))
   --> tests/ui-stable/enum.rs:185:8
    |
185 | #[repr(isize)]
    |        ^^^^^

error: cannot derive Unaligned with repr(align(N > 1))
   --> tests/ui-stable/enum.rs:191:12
    |
191 | #[repr(u8, align(2))]
    |            ^^^^^^^^

error: cannot derive Unaligned with repr(align(N > 1))
   --> tests/ui-stable/enum.rs:197:12
    |
197 | #[repr(i8, align(2))]
    |            ^^^^^^^^

error: cannot derive Unaligned with repr(align(N > 1))
   --> tests/ui-stable/enum.rs:203:18
    |
203 | #[repr(align(1), align(2))]
    |                  ^^^^^^^^

error: cannot derive Unaligned with repr(align(N > 1))
   --> tests/ui-stable/enum.rs:209:8
    |
209 | #[repr(align(2), align(4))]
    |        ^^^^^^^^

error[E0565]: meta item in `repr` must be an identifier
  --> tests/ui-stable/enum.rs:19:8
   |
19 | #[repr("foo")]
   |        ^^^^^

error[E0552]: unrecognized representation hint
  --> tests/ui-stable/enum.rs:25:8
   |
25 | #[repr(foo)]
   |        ^^^
   |
   = help: valid reprs are `Rust` (default), `C`, `align`, `packed`, `transparent`, `simd`, `i8`, `u8`, `i16`, `u16`, `i32`, `u32`, `i64`, `u64`, `i128`, `u128`, `isize`, `usize`

error[E0566]: conflicting representation hints
  --> tests/ui-stable/enum.rs:37:8
   |
37 | #[repr(u8, u16)]
   |        ^^  ^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #68585 <https://github.com/rust-lang/rust/issues/68585>
   = note: `#[deny(conflicting_repr_hints)]` on by default

error[E0277]: the trait bound `UnsafeCell<()>: NoCell` is not satisfied
  --> tests/ui-stable/enum.rs:51:10
   |
51 | #[derive(NoCell)]
   |          ^^^^^^ the trait `NoCell` is not implemented for `UnsafeCell<()>`
   |
   = help: the following other types implement trait `NoCell`:
             bool
             char
             isize
             i8
             i16
             i32
             i64
             i128
           and $N others
   = help: see issue #48214
   = note: this error originates in the derive macro `NoCell` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `UnsafeCell<u8>: NoCell` is not satisfied
  --> tests/ui-stable/enum.rs:59:10
   |
59 | #[derive(NoCell)]
   |          ^^^^^^ the trait `NoCell` is not implemented for `UnsafeCell<u8>`
   |
   = help: the following other types implement trait `NoCell`:
             bool
             char
             isize
             i8
             i16
             i32
             i64
             i128
           and $N others
   = help: see issue #48214
   = note: this error originates in the derive macro `NoCell` (in Nightly builds, run with -Z macro-backtrace for more info)
